# Panako-Rust

./: .gitignore  Cargo.toml  DATABASE.md  EXAMPLES.md  MIGRATION.md  README.md  config.postgresql.toml  config.toml  docker-compose.yml
Examples/fingerprints/: RA00011-25.bson  RA00047-25.bson  RA00052-25.bson  RA00109-25.bson  RA00161-25.bson  RA00162-25.bson  RA00164-25.bson  RA00165-25.bson  RA00172-25.bson  RA00183-25.bson  RA00230-25.bson  RA00258-25.bson  RA00259-25.bson  RA00260-25.bson  RA00267-25.bson  RA00268-25.bson  RA00302-25.bson  RA00318-22.bson  RA00330-25.bson  RA00331-25.bson  RA00431-25.bson  RA00447-25.bson  RA00448-25.bson  RA00452-25.bson  RA00455-25.bson  RA00456-25.bson  RA00475-25.bson  RA00560-25.bson  RA00646-25.bson  RA00647-25.bson  RA00653-25.bson  RA00658-25.bson  RA00660-25.bson  RA00662-25.bson  RA00670-25.bson  RA00734-25.bson  RA00847-25.bson  RA00890-25.bson  RA00894-25.bson  RA00905-25.bson  (+6 more)
crates/panako-cli/: Cargo.toml
crates/panako-cli/src/: lib.rs  output.rs
crates/panako-core/: Cargo.toml
crates/panako-core/src/: config.rs  eventpoint.rs  fingerprint.rs  lib.rs  matching.rs  segmentation.rs  storage_backend.rs  storage_config.rs
crates/panako-core/src/audio/: decoder.rs  mod.rs  resample.rs  ts.rs  video.rs
crates/panako-core/src/matching/: tests.rs
crates/panako-core/src/transform/: mod.rs
crates/panako-db/: Cargo.toml
crates/panako-db/src/: connection.rs  lib.rs  models.rs  operations.rs
crates/panako-fp/: Cargo.toml
crates/panako-fp/src/: format.rs  json_format.rs  lib.rs  reader.rs  writer.rs
migrations/: 001_initial_schema.sql
