[workspace]
members = [
    "crates/panako-core",
    "crates/panako-fp",
    "crates/panako-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Panako Rust Port"]
license = "AGPL-3.0"

[workspace.dependencies]
# Audio decoding
hound = "3.5"           # WAV
minimp3 = "0.5"         # MP3
claxon = "0.4"          # FLAC
lewton = "0.10"         # OGG Vorbis

# Video demuxing (Symphonia framework)
symphonia = { version = "0.5", features = ["mp3", "aac", "isomp4", "mkv"] }

# MPEG-TS specific
mpeg2ts-reader = "0.18"

# DSP
rustfft = "6.1"
rubato = "0.15"         # Resampling

# Parallelism
rayon = "1.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Compression
zstd = "0.13"

# I/O
memmap2 = "0.9"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
crc = "3.0"
