[package]
name = "panako-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Audio decoding
hound.workspace = true
minimp3.workspace = true
claxon.workspace = true
lewton.workspace = true

# Video demuxing
symphonia.workspace = true
mpeg2ts-reader.workspace = true

# DSP
rustfft.workspace = true
rubato.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
async-trait.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Parallelism
rayon.workspace = true

# Internal dependencies
panako-fp = { path = "../panako-fp" }
panako-db = { path = "../panako-db" }
deadpool-postgres.workspace = true

# Utilities
log = "0.4"

[dev-dependencies]
approx = "0.5"
