[package]
name = "panako-fp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true

# Compression
zstd.workspace = true

# I/O
memmap2.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Utilities
crc.workspace = true
